<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/app_info"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@+id/app"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_confirmed"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/confirmed"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_recovered"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/recovered"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_dead"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deaths"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/panel"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/app_data"
        android:textColor="@android:color/black"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/info"
        android:autoLink="web"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/weblink"
        android:textAppearance="?android:attr/textAppearanceSmall" />

<!--    <Button-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/info"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginTop="25dp"-->
<!--        android:text="Button" />-->
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="75dp"
        android:autoLink="email"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/contato"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>